--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -1,3 +1,9 @@
-.container {
-  color: #121212;
+@import url('https://fonts.googleapis.com/css?family=Varela+Round&display=swap&subset=hebrew,latin-ext,vietnamese');
+
+.twitchMode {
+  background     : #0f0e11;
+  height         : 100vh;
+  display        : flex;
+  align-items    : center;
+  justify-content: center;
 }
