manage: Temporarily set test content
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -17,3 +17,9 @@
   align-items    : center;
   justify-content: center;
 }
+
+.twitchLightMode {
+  background     : #faf9fa;
+  align-items    : center;
+  justify-content: center;
+}
