--- a/src/components/Title/style.scss
+++ b/src/components/Title/style.scss
@@ -1,4 +1,12 @@
 .container {
   font-family: Jura, sans-serif;
   text-align : center;
+  position   : relative;
+}
+
+.linkIcon {
+  position : absolute;
+  font-size: 20px !important;
+  right    : 8px;
+  top      : 8px;
 }
