feat: Added icon support
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/components/Title/style.scss
+++ b/src/components/Title/style.scss
@@ -4,6 +4,10 @@
   position   : relative;
 }
 
+.titleIcon {
+  margin-right: 12px;
+}
+
 .linkIcon {
   position : absolute;
   font-size: 20px !important;
