improve: Improved title align
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/components/Title/style.scss
+++ b/src/components/Title/style.scss
@@ -5,7 +5,12 @@
 }
 
 .titleIcon {
-  margin-right  : 12px;
+  margin-right: 12px;
+}
+
+.text {}
+
+.verticalAlign {
   vertical-align: middle;
 }
 
