--- a/src/components/Title/style.scss
+++ b/src/components/Title/style.scss
@@ -13,6 +13,14 @@
   flex: 1
 }
 
+.linkPointerImage {
+  position : absolute;
+  font-size: 20px !important;
+  right    : 5px;
+  top      : 24px;
+  z-index  : 1;
+}
+
 .linkIcon {
   position : absolute;
   font-size: 20px !important;
