feat: Added rich tag `img`
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/components/RichText/style.scss
+++ b/src/components/RichText/style.scss
@@ -3,3 +3,12 @@
 .qrWrapper {
   text-align: center;
 }
+
+.imageWrapper {
+  margin-top   : 4px;
+  margin-bottom: 4px;
+}
+
+.image {
+  max-width: 280px;
+}
